# psv-kampioenschecker

./: app.py  footballdataorg.py  index.html  main.py  pyproject.toml
.github/workflows/: update.yaml  update.yml
docs/: index.html
templates/: index.html
